Inserido o campo e agora pode cadastrar usuários
